--- a/package.json
+++ b/package.json
@@ -27,5 +27,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "jest-canvas-mock": "^2.0.0",
+    "jest-dom": "^3.1.3",
+    "react-testing-library": "^6.1.2"
   }
 }
