--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "file-saver": "^2.0.1",
     "jest-canvas-mock": "^2.0.0",
     "jest-dom": "^3.1.3",
+    "noisejs": "^2.1.0",
     "react-testing-library": "^6.1.2"
   },
   "jest": {
